syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserArgs) returns (User) {}
  rpc GetUsers (GetUserArgs) returns (Users) {}
  rpc UpdateUser (UpdateUserArgs) returns (User) {}
  rpc DeleteUser (DeleteUserArgs) returns (User) {}
}

message User {
  string _id = 1;
  string firstName = 2;
  string lastName = 3;
  optional string profileImageId = 4;
  string _createdAt = 5;
  string _updatedAt = 6;
}

message Users {
  repeated User users = 1;
}

message CreateUserArgs {
  string firstName = 1;
  string lastName = 2;
  optional string profileImageId = 3;
}

message GetUserArgs {
  repeated string ids = 1;
}

message UpdateUserArgs {
  string _id = 1;
  optional string firstName = 2;
  optional string lastName = 3;
  optional string profileImageId = 4;
}

message DeleteUserArgs {
  string _id = 1;
}
